packages/neos-ui-views/src/NodeInfoView/style.module.css
.nodeInfoView {
    margin: 0;
    padding: 0;
    list-style: none;
}

.nodeInfoView__item {
    background-color: var(--colors-ContrastDarkest);
    padding: 8px 12px;
    margin-bottom: 1px;
    line-height: 20px;
    min-height: 20px;

    &:first-child {
        border-top-left-radius: 2px;
        border-top-right-radius: 2px;
    }

    &:last-child {
        border-bottom: none;
        border-bottom-left-radius: 2px;
        border-bottom-right-radius: 2px;
    }
}

.nodeInfoView__title {
    font-weight: bold;
}

.nodeInfoView__content {
    font-size: 13px;
    color: var(--colors-ContrastBright);
}

